Fix overflowing document url

--- a/src/scss/popup.scss
+++ b/src/scss/popup.scss
@@ -107,6 +107,10 @@ header p:first-child {
   }
 }
 
+.facts__doc-url {
+  overflow: scroll;
+}
+
 .document-facts {
   padding: 0;
 }
